Completing the aggregation Layer with minimal code changes